7902255: Use valueOf() instead of Number subclass constructors
Reviewed-by: jjg