@@ -99,7 +99,7 @@ public class IntQuestionRenderer
             resetBtn.addActionListener(new ActionListener() {
                     public void actionPerformed(ActionEvent e) {
                         NumberFormat fmt = NumberFormat.getNumberInstance();  // will be locale-specific
-                        p.setValue(fmt.format(new Integer(defVal)));
+                        p.setValue(fmt.format(Integer.valueOf(defVal)));
                     }
                 });
         }
