@@ -390,7 +390,7 @@ public class EditLinks
             } else
                 if (buf.length() == 0)
                     throw new IOException(i18n.getString("editLinks.idExpected",
-                                                         new Object[] { currFile, new Integer(line) }));
+                                                         new Object[] { currFile, Integer.valueOf(line)}));
                 else
                     return buf.toString();
         }
@@ -418,7 +418,7 @@ public class EditLinks
                ((quote >= 0) && (c != quote))) {
             if (c == -1 || c == '\n' || c == '\r') {
                 throw new IOException(i18n.getString("editLinks.mismatchQuotes",
-                                                         new Object[] { currFile, new Integer(line) }));
+                                                         new Object[] { currFile, Integer.valueOf(line)}));
             }
             buf.append((char)c);
             nextCh();
@@ -467,7 +467,7 @@ public class EditLinks
             String att = scanIdentifier();
             if (att == "")
                 throw new IOException(i18n.getString("editLinks.badHTML",
-                                                         new Object[] { currFile, new Integer(line) }));
+                                                         new Object[] { currFile, Integer.valueOf(line)}));
             String value = scanValue();
             skipSpace();
         }
