@@ -249,7 +249,7 @@ class CE_TestsPane extends CE_StdPane
                 }
                 boolean more = badPaths.size() > MAX_BAD_PATHS;
                 uif.showError("ce.tests.badPaths",
-                              new Object[] { sb.toString(), new Integer(more ? 1 : 0) });
+                              new Object[] { sb.toString(), Integer.valueOf(more ? 1 : 0)});
             }
         }
 
