@@ -502,7 +502,7 @@ public class Main
     private static void trace(String msg) {
         long now = System.currentTimeMillis();
         traceOut.println(MessageFormat.format("{0,number,[##0.0]} {1}",
-                new Float((now - traceStartTime)/1000f), msg));
+                Float.valueOf((now - traceStartTime)/1000f), msg));
         traceOut.flush();
     }
 
