@@ -85,8 +85,8 @@ class TabDeskView extends DeskView {
         // array of tools
         Arrays.sort(tools, new Comparator<Tool>() {
             public int compare(Tool o1, Tool o2) {
-                Long l1 = new Long(o1.getCreationTime());
-                Long l2 = new Long(o2.getCreationTime());
+                Long l1 = Long.valueOf(o1.getCreationTime());
+                Long l2 = Long.valueOf(o2.getCreationTime());
                 return (l1.compareTo(l2));
             }
         });
@@ -520,7 +520,7 @@ class TabDeskView extends DeskView {
 
         private void addMenuItem(JMenu m, int n, String s, Object o) {
             JMenuItem mi = new JMenuItem(uif.getI18NString("dt.windows.toolX.mit",
-                                                 new Object[] { new Integer(n), s }));
+                                                 new Object[] {Integer.valueOf(n), s }));
             if (n < 10)
                 mi.setMnemonic(Character.forDigit(n, 10));
             mi.addActionListener(this);
